# splat-tagger

./: Cargo.toml  README.md
.github/workflows/: dev.yml  release.yml
src/: battle.rs  config.rs  main.rs  salmon.rs  youtube.rs
