[package]
name = "splat-tagger"
description = "Tag your stat.ink matches to a YouTube livestream with ease!"
version = "0.1.0"
edition = "2021"
categories = ["games"]
keywords = [
    "splatoon",
    "stat.ink",
    "youtube",
    "tagging",
    "streaming",
    "livestream",
]

authors = ["Christopher Angelo <angelo@angeloanan.xyz>"]
repository = "https://github.com/angeloanan/splat-tagger"
license = "GPL-3.0"
readme = "README.md"

[profile.release]
# panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = 3     # Optimize for binary size - P.S, default release is 3 anyway
strip = true      # Remove debug symbols

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
copypasta = "0.10.1"
dirs = "5.0.1"
reqwest = { version = "0.12.4", features = ["json", "cookies"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_with = "3.8.1"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
